--- a/templates/member/index.html.twig
+++ b/templates/member/index.html.twig
@@ -5,139 +5,10 @@
 {% block body %}
     {% if app.user.url is defined %}
 
-        <section class="bg-surface-light/50 dark:bg-surface-dark/30 p-3 sm:p-5 mb-4 "
+        {% include '_template-parts/_lines-actions-header.html.twig' %}
 
-                {{ stimulus_controller('tabs') }}>
+        {% include '_template-parts/_lines-list.html.twig' %}
 
-
-            <div class="mb-4 border-b-2 border-gray-200 dark:border-surface-dark">
-                <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="default-tab"
-                    data-tabs-toggle="#default-tab-content" role="tablist">
-                    <li class="me-2 border-b-2 border-surface-dark dark:border-surface-light/60" role="presentation">
-                        <button  class="inline-block p-4 rounded-t-lg" id="qr-tab"
-                        <button  class="inline-block p-4 rounded-t-lg" id="qr-tab"
-                                data-tabs-target="#qr" {{ stimulus_action('tabs', 'show', 'click', { 'tab': 'qr' }) }}
-                                type="button" role="tab" aria-controls="profile" aria-selected="false"
-                                data-tabs-active-class="border-content-primary-light/80 dark:border-content-primary-dark/80">
-                            {% trans %}title.myqr{% endtrans %}
-                        </button>
-                    </li>
-                    <li class="me-2" role="presentation">
-                        <button class="inline-block p-4  rounded-t-lg" id="url-tab"
-                                data-tabs-target="#url" {{ stimulus_action('tabs', 'show', 'click', { 'tab': 'url' }) }}
-                                type="button" role="tab" aria-controls="profile" aria-selected="false">
-                            {% trans %}title.myurl{% endtrans %}
-                        </button>
-                    </li>
-                    <li class="me-2" role="presentation">
-                        <button class="inline-block p-4 rounded-t-lg" id="send-tab"
-                                data-tabs-target="#send" {{ stimulus_action('tabs', 'show', 'click', { 'tab': 'send' }) }}
-                                type="button" role="tab" aria-controls="profile" aria-selected="false">
-                            {% trans %}title.sendlist{% endtrans %}
-                        </button>
-                    </li>
-                </ul>
-            </div>
-            <div id="default-tab-content" class="mx-auto max-w-screen-xl px-4 lg:px-12">
-                <div class="space-y-8 p-4 bg-surface-light dark:bg-surface-dark relative flex flex-col space-y-4 shadow-md sm:rounded-lg overflow-hidden flex " {{ stimulus_target('tabs', 'qr') }}
-                     id="qr" role="tabpanel" aria-labelledby="qr-tab">
-                    <twig:title:h2>{% trans %}title.myqr{% endtrans %}</twig:title:h2>
-                    <div class="w-full flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4">
-                        <div class="w-full lg:w-1/2 flex justify-center items-center">
-                            <img src="{{ qr_code_url( app.request.schemeAndHttpHost ~ app.request.baseUrl ~ '/g/' ~ app.user.slug) }}"
-                                 class="w-48 aspect-square" alt="qr code medocs.be/g/{{ app.user.slug }}"/>
-                        </div>
-                        <div class="w-full flex flex-col justify-center items-start lg:w-1/2 border border-surface-dark dark:border-surface-light/70 text-content-primary-light dark:text-content-primary-dark/80 p-4">
-                            <p class="mb-4">En cas de besoin, faites scanner ce QR code pour partager à votre liste de
-                                médicaments.</p>
-                            <p><strong>Astuce: </strong> faites une capture d'écran !</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="hidden p-4 bg-surface-light dark:bg-surface-dark relative shadow-md sm:rounded-lg overflow-hidden space-y-8" {{ stimulus_target('tabs', 'url') }}
-                     id="url" role="tabpanel" aria-labelledby="url-tab">
-                    <twig:title:h2> {% trans %}title.myurl{% endtrans %} </twig:title:h2>
-                    <div class="w-full flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4" {{ stimulus_controller('generate') }}>
-                        <div class="w-full lg:w-1/2 flex flex-col justify-center items-center">
-                            {{ form_start(url_form, {'attr': {
-                                'class': 'w-full flex flex-col mb-6 text-content-primary-light/70 dark:text-content-primary-dark/70',
-                                'id': 'emergency'
-                            }}) }}
-                            <label for="url_url"
-                                   class="w-full flex-col md:flex-row justify-start items-center space-x-4 text-content-primary-light/70 dark:text-content-primary-dark/70">
-                                {{ app.request.schemeAndHttpHost ~ app.request.baseUrl }}/g/
-                                {{ form_widget(url_form.url, {
-                                    'id': 'url_url',
-                                    'value': app.user.url,
-                                    'attr': {
-                                        'class': 'w-full md:w-auto flex flex-1 border border-surface-dark/20 dark:border-surface-light/20 bg-surface-light/60 dark:bg-surface-light/20 text-sm rounded-lg focus:ring-surface-dark/80 focus:border-surface-dark/80 focus-visible:ring-surface-dark/80 focus-visible:border-surface-dark/80 block  p-1 dark:border-surface-light/20 dark:placeholder-gray-400 dark:text-white dark:focus:ring-surface-light/80 dark:focus:border-surface-light/80 dark:focus-visible:ring-surface-light/80 dark:focus-visible:border-surface-light/80'}
-                                }) }}
-                            </label>
-
-                            <div class="mt-4 w-full flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-                                <twig:button:submit> Modifier</twig:button:submit>
-                                <a {{ stimulus_action('generate', 'insert', 'click') }}
-                                        class="cursor-pointer inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-content-primary-light/50 border border-content-primary-light/50 rounded-lg hover:bg-content-primary-light/10 focus:ring-4 focus:ring-content-primary-light/20 dark:text-white dark:border-content-primary-dark/70 dark:hover:bg-content-primary-dark/70 dark:focus:ring-content-primary-dark/80">
-                                    Générer un pseudo
-                                </a>
-                                {#                                <twig:button:secondary  {{ ...stimulus_action('generate', 'insert', 'click') }}> Générer un pseudo</twig:button:secondary> #}
-                            </div>
-                            {{ form_end(url_form) }}
-                        </div>
-
-                        <div class="w-full flex flex-col justify-start items-center lg:w-1/2 border border-surface-dark dark:border-surface-light/70 text-content-primary-light dark:text-content-primary-dark/80 -mt-4 p-4">
-                            <p class="mb-4">Définissez votre pseudo pour rendre votre profil unique</p>
-                            <p><strong>En manque d'idées ? </strong> vous avez la possibilité de générer un pseudo
-                                aléatoire.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="hidden space-y-8 p-4 bg-surface-light dark:bg-surface-dark relative shadow-md sm:rounded-lg overflow-hidden" {{ stimulus_target('tabs', 'send') }}
-                     id="send" role="tabpanel" aria-labelledby="send-tab">
-                    <twig:title:h2> {% trans %}title.sendlist{% endtrans %} </twig:title:h2>
-                    <div class="w-full flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4">
-                        <div class="w-full lg:w-1/2 flex flex-col justify-center items-center">
-                            {{ form_start(send_form, {'attr': {
-                                'class': 'w-full flex flex-col mb-6 text-content-primary-light/70 dark:text-content-primary-dark/70',
-                                'id': ''
-                            }}) }}
-
-
-                            <label for="send_email" class="space-y-4">
-                                {{ form_widget(send_form.email, {
-                                    'attr': {'class': 'w-full text-content-primary-light border-2 border-surface-dark/20 dark:border-surface-light/20 text-content-primary-light dark:text-content-primary-light text-sm rounded-lg focus:ring-surface-dark/80 focus:border-surface-dark/80 focus-visible:ring-surface-dark/80 focus-visible:border-surface-dark/80 block  p-2.5 dark:border-surface-light/20 dark:placeholder-gray-400 dark:text-white dark:focus:ring-surface-light/80 dark:focus:border-surface-light/80 dark:focus-visible:ring-surface-light/80 dark:focus-visible:border-surface-light/80'}
-                                }) }}
-                            </label>
-                            <div class="mt-4">
-                                <twig:button:submit> Envoyer</twig:button:submit>
-                            </div>
-                            {{ form_end(send_form) }}
-                        </div>
-                        <div class="w-full lg:w-1/2 border border-surface-dark dark:border-surface-light/70 text-content-primary-light dark:text-content-primary-dark/80 -mt-4 p-4">
-                            <p>Indiquez une adresse email, la personne recevra un lien vers votre liste publique</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-
-        </section>
-
-
-        {% embed "_template-parts/_lines-list.html.twig" %}
-            {% block button_action %}
-                <a href="{{ path('member_line_new') }}"
-                   class="flex items-center justify-center text-content-primary-dark bg-surface-dark hover:bg-surface-dark/80 focus:ring-4 focus:ring-surface-dark/30 font-medium rounded-lg text-sm px-4 py-2 dark:text-content-primary-light dark:bg-surface-light/60 dark:hover:bg-surface-light/70 focus:outline-none dark:focus:ring-surface-light/80">
-                    <svg class="h-3.5 w-3.5 mr-2" fill="currentColor" viewbox="0 0 20 20"
-                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                        <path clip-rule="evenodd" fill-rule="evenodd"
-                              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"/>
-                    </svg>
-                    {% trans %} button.add{% endtrans %}
-                </a>
-            {% endblock %}
-        {% endembed %}
     {% endif %}
 
 {% endblock %}
