Update templates to enhance user experience with translated placeholders and improved button labels

--- a/templates/landing/index.html.twig
+++ b/templates/landing/index.html.twig
@@ -35,8 +35,8 @@
                 <p class="mb-4 font-light"><span class="font-extrabold">Partage Facile</span> : Envoyez vos listes par e-mail ou code QR.</p>
                 <p class="mb-4 font-light"><span class="font-extrabold">Sécurité</span> : Partage sécurisé avec une URL anonyme</p>
                 <p class="my-8 font-medium">Un email et un mot de passe suffisent pour commencer.</p>
-                <a href="#" class="inline-flex items-center font-medium text-content-primary-light/60 hover:text-content-primary-light/80 dark:text-content-primary-dark/50 dark:hover:text-content-primary-dark/70">
-                    Dites adieu aux listes papier
+                <a href="{{ path('app_register') }}" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-content-primary-light font-medium text-center rounded-lg bg-accent-light hover:bg-accent-light/80  dark:bg-accent-dark dark:hover:bg-accent-dark/80 focus:ring-4 focus:ring-pr dark:focus:ring-accent-light/30">
+                    {{ 'button.cta.register'|trans }}
                     <svg class="ml-1 w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
                 </a>
             </div>
