Add footer to index.html.twig with copyright information and link to Jphiweb

--- a/templates/landing/index.html.twig
+++ b/templates/landing/index.html.twig
@@ -43,4 +43,7 @@
         </div>
     </section>
 
+    <footer class="mt-24 w-full text-sm  text-center text-content-primary-light/40 dark:text-content-primary-dark/40">
+                © 2021-{{ 'now' | date('Y') }} <a href="https://jphiweb.be" class="hover:underline">Jphiweb</a>. Développements de sites et d'outils web.
+    </footer>
 {% endblock %}
