Update register.html.twig to change button label from 'signin' to 'signup'

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -78,7 +78,7 @@
                     </div>
 
 
-                    <twig:button:submit class="md:w-full">{% trans %}signin {% endtrans %}</twig:button:submit>
+                    <twig:button:submit class="md:w-full">{% trans %}signup {% endtrans %}</twig:button:submit>
                     <p class="text-sm font-light text-content-primary-light/60 dark:text-content-primary-dark/50">
                         {% trans %} form.already_registered{% endtrans %}
                         <a href="{{ path('app_login') }}"
