Update footer in _footer.html.twig to change copyright link from Pixelservice to Jphiweb

--- a/templates/_template-parts/_footer.html.twig
+++ b/templates/_template-parts/_footer.html.twig
@@ -22,7 +22,7 @@
                 </li>
             </ul>
             <span class="text-sm sm:text-center text-content-primary-light/40 dark:text-content-primary-dark/40">
-                © 2021-{{ 'now' | date('Y') }} <a href="https://pixelservices.be" class="hover:underline">Pixelservice</a>. Développements de sites et d'outils web.
+                © 2021-{{ 'now' | date('Y') }} <a href="https://jphiweb.be" class="hover:underline">Jphiweb</a>. Développements de sites et d'outils web.
             </span>
         </div>
     </footer>
