Update _lines-actions-header.html.twig to enhance layout with flexbox for better alignment

--- a/templates/_template-parts/_lines-actions-header.html.twig
+++ b/templates/_template-parts/_lines-actions-header.html.twig
@@ -102,7 +102,7 @@
                     </div>
                     {{ form_end(send_form) }}
                 </div>
-                <div class="w-full lg:w-1/2 border border-surface-dark dark:border-surface-light/70 text-content-primary-light dark:text-content-primary-dark/80 -mt-4 p-4">
+                <div class="w-full flex flex-col justify-center items-start lg:w-1/2 border border-surface-dark dark:border-surface-light/70 text-content-primary-light dark:text-content-primary-dark/80 -mt-4 p-4">
                     <p>Indiquez une adresse email, la personne recevra un lien vers votre liste publique</p>
                 </div>
             </div>
