--- a/templates/_template-parts/_lines-list.html.twig
+++ b/templates/_template-parts/_lines-list.html.twig
@@ -49,8 +49,8 @@
                                     N/A
                                 {% endfor %}
                             </td>
-                            <td class="px-4 py-3">{{ item.dose.frequency.name|default('N/A') }}</td>
-                            <td class="px-4 py-3">{{ item.dose.moment.name|default('N/A') }}</td>
+                            <td class="px-4 py-3">{{ item.dose.frequency.name ?? 'N/A' }}</td>
+                            <td class="px-4 py-3">{{ item.dose.moment.name ?? 'N/A' }}</td>
                             <td class="px-4 py-3 flex items-center justify-end">
                                 <button id="apple-imac-27-dropdown-button" data-dropdown-toggle="apple-imac-27-dropdown"
                                         class="inline-flex items-center p-0.5 text-sm font-medium text-center text-gray-500 hover:text-gray-800 rounded-lg focus:outline-none dark:text-gray-400 dark:hover:text-gray-100"
@@ -81,14 +81,12 @@
                             </td>
                         </tr>
                     {% else %}
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row"
-                                class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                Rien dans la liste pour l'instant
-                            </th>
+                     <tr class="border-b dark:border-gray-700">
+                       <td colspan="6" class="px-4 py-3 text-center text-gray-500 dark:text-gray-400">
+                        Rien dans la liste pour l'instant
+                      </td>
                         </tr>
-
-                    {% endfor %}
+                      {% endfor %}
                     </tbody>
                 </table>
             </div>
